tests/parser/valid/03_function_params_return.src
fn add(int a, float b) -> float {
    return b;
}
