tests/parser/invalid/06_bad_return_arrow.src
fn add(int a) float {
    return a;
}
